src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campagin_Code__c</fullName>
        <label>Campaign Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hit_Rate__c</fullName>
        <formula>ExpectedResponse</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hit Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;Builders and Developers,</fullName>
                </value>
                <value>
                    <fullName>Building Product Manufacturers,</fullName>
                </value>
                <value>
                    <fullName>Apartment Owners and Managers,</fullName>
                </value>
                <value>
                    <fullName>Lenders and Investors,</fullName>
                </value>
                <value>
                    <fullName>Industry Associates,</fullName>
                </value>
                <value>
                    <fullName>Other,</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCT - ACCOUNTING FIRMS,</fullName>
                </value>
                <value>
                    <fullName>ADVR - ADVERTISING,</fullName>
                </value>
                <value>
                    <fullName>APPL - APPLIANCE COMPANY,</fullName>
                </value>
                <value>
                    <fullName>APPR - APPRAISER,</fullName>
                </value>
                <value>
                    <fullName>APTM - APARTMENT MANAGER,</fullName>
                </value>
                <value>
                    <fullName>APTO - APARTMENT OWNERS,</fullName>
                </value>
                <value>
                    <fullName>ARCH - ARCHITECT,</fullName>
                </value>
                <value>
                    <fullName>ASSOC - BLDING INDUSTRY ASSOC &amp; CNCIL,</fullName>
                </value>
                <value>
                    <fullName>ATTY - ATTORNEY,</fullName>
                </value>
                <value>
                    <fullName>BLDR - BUILDERS,</fullName>
                </value>
                <value>
                    <fullName>BPM  - OTHR BLDING PRDCT MANUFTRS,</fullName>
                </value>
                <value>
                    <fullName>BROK - LAND BROKER,</fullName>
                </value>
                <value>
                    <fullName>CABI - CABINETS,</fullName>
                </value>
                <value>
                    <fullName>CONS - RESEARCH CONSULTANT,</fullName>
                </value>
                <value>
                    <fullName>DEVC - DEVELOPER-COMMERCIAL,</fullName>
                </value>
                <value>
                    <fullName>DEVL - DEVELOPER-RESIDENTIAL LAND,</fullName>
                </value>
                <value>
                    <fullName>DOOR - DOORS MANUFACTURER,</fullName>
                </value>
                <value>
                    <fullName>ELEC - ELECTRICAL,</fullName>
                </value>
                <value>
                    <fullName>ENGR - ENGINEER,</fullName>
                </value>
                <value>
                    <fullName>FAUC - FAUCET MANUFACTURER,</fullName>
                </value>
                <value>
                    <fullName>FLOOR - FLOORING MANUFACTURER,</fullName>
                </value>
                <value>
                    <fullName>GOVT - GOVERNMENT/CITY/COUNTY,</fullName>
                </value>
                <value>
                    <fullName>HVAC - HEATING, VENILATION, AIRCON</fullName>
                </value>
                <value>
                    <fullName>INSUL - INSULATION,</fullName>
                </value>
                <value>
                    <fullName>INTD - INTERIOR DESIGNER,</fullName>
                </value>
                <value>
                    <fullName>INVB - INVESTMENT BANKER (EQUITY),</fullName>
                </value>
                <value>
                    <fullName>LEND - LENDER/BANK,</fullName>
                </value>
                <value>
                    <fullName>LUMB - LUMBER,</fullName>
                </value>
                <value>
                    <fullName>MISC - OTHER INDUSTRY,</fullName>
                </value>
                <value>
                    <fullName>MORT - MORTGAGE COMPANY,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Interest_s__c</fullName>
        <label>Lead Interest(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Housing Key Market Indicator Alert</fullName>
                </value>
                <value>
                    <fullName>Corporate News &amp; Events</fullName>
                </value>
                <value>
                    <fullName>Customer Updatesw</fullName>
                </value>
                <value>
                    <fullName>Housing Market Key Indicator Alert</fullName>
                </value>
                <value>
                    <fullName>New Home Data Alert - Subscribers Only</fullName>
                </value>
                <value>
                    <fullName>Product News &amp; Promotions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Speaker__c</fullName>
        <description>List of Local Speakers for FRAME Events.</description>
        <label>Local Speaker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deanna Sihon</fullName>
                </value>
                <value>
                    <fullName>JT Swartz</fullName>
                </value>
                <value>
                    <fullName>Michelle Weedon</fullName>
                </value>
                <value>
                    <fullName>Mike Rinner</fullName>
                </value>
                <value>
                    <fullName>Mike Timmerman</fullName>
                </value>
                <value>
                    <fullName>Scott Davis</fullName>
                </value>
                <value>
                    <fullName>Shaun McCutcheon</fullName>
                </value>
                <value>
                    <fullName>Steve LaTerra</fullName>
                </value>
                <value>
                    <fullName>Steve Smiley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>National_Speaker__c</fullName>
        <description>List of National Speakers for FRAME Events</description>
        <label>National Speaker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ali Wolf</fullName>
                </value>
                <value>
                    <fullName>Steve LaTerra</fullName>
                </value>
                <value>
                    <fullName>Tim Sullivan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_in_Campaign__c</fullName>
        <formula>NumberOfLeads +  NumberOfContacts</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_type__c</fullName>
        <label>Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Placeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <description>FRAME&apos;s Themes</description>
        <label>Theme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Land Panel</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
                <value>
                    <fullName>Multifamily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Clicks__c</fullName>
        <label># of Clicks</label>
        <summarizedField>CampaignMember.cirrusadv__Num_of_Clicks__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Emails_Clicked__c</fullName>
        <label># of Emails Clicked</label>
        <summaryFilterItems>
            <field>CampaignMember.cirrusadv__Num_of_Clicks__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Emails_Opened__c</fullName>
        <label># of Emails Opened</label>
        <summaryFilterItems>
            <field>CampaignMember.cirrusadv__Num_of_Opens__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Opens__c</fullName>
        <label># of Opens</label>
        <summarizedField>CampaignMember.cirrusadv__Num_of_Opens__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Replies__c</fullName>
        <label># of Replies</label>
        <summarizedField>CampaignMember.cirrusadv__Num_of_Replies__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__mass_email_id__c</fullName>
        <label>Mass Email Id</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_EventsNumberOfTicketsRollup__c</fullName>
        <description>The number of tickets associated with this campaign, using the trigger rollup process.</description>
        <inlineHelpText>The number of tickets associated with this campaign, using the trigger rollup process.</inlineHelpText>
        <label>Total Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Active_FRAME_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>frame</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active FRAME Events</label>
    </listViews>
    <listViews>
        <fullName>Active_Metrostudy_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Maynard,Knutson,Ealey</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR,LAST_YEAR</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>Briefing,Memsrv</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>MS</value>
        </filters>
        <label>Active Metrostudy Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Metrostudy_Campaigns_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>Briefing,Memsrv</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Active Metrostudy Campaigns - 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Briefing_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Briefing</value>
        </filters>
        <label>Briefing Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Council_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Council</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>q18,q19</value>
        </filters>
        <label>Council Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Crittenden_REF_Conf_Spnsrshp_9_14_MIA</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <label>Crittenden REF Conf Spnsrshp 9/14 MIA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Media_Kit_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>kit</value>
        </filters>
        <label>Media Kit Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MemSrv_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>MemSrv</value>
        </filters>
        <label>MemSrv Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Quarterly_Briefing_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Briefing</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>1Q16</value>
        </filters>
        <label>Quarterly Briefing Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1Q17_Briefings</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Q17</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Briefing</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>Reminder</value>
        </filters>
        <label>2017 Briefings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2Q16_Briefings</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>2Q16</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Briefing</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>reminder</value>
        </filters>
        <label>2Q16 Briefings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3Q15_In_Person_Briefings</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>3Q15</value>
        </filters>
        <label>3Q15 In Person Briefings</label>
        <language>en_US</language>
        <sharedTo>
            <group>Metrostudy_Membership_Services</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X4Q15_In_Person_Briefings</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>4Q15</value>
        </filters>
        <label>4Q15 In Person Briefings</label>
        <language>en_US</language>
        <sharedTo>
            <group>Metrostudy_Membership_Services</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Market_Intelligence_Campaign_Record_Type</fullName>
        <active>true</active>
        <label>MS_Market Intelligence Campaign Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>sbx_Registration_Campaign</fullName>
        <active>true</active>
        <description>Soapbox Events registration Campaign record type</description>
        <label>Soapbox Registration</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>